DontExpiReBack/src/main/java/org/example/error/UserExistsException.java
package org.example.error;

public class UserExistsException extends RuntimeException {
    public UserExistsException(String message) {
        super(message);
    }
}
